Implemented @ as a special character within prefix statements.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -53,11 +53,14 @@ See the next section for a cumulative changelog since 0.24.8.
     - Added GetRCInt64.
     - Fixed Right Click -> Set as desktop background on Windows 8.
     - Fixed the color and appearance dialog on Windows 8.
-    - Fixed the desktop background dialog on Windows 8.
+    - Fixed the desktop background dialog on Windows 8. Per-monitor wallpaper,
+      and slideshows are not working yet.
     - Added $dollar$, $at$, $nl$, and $cr$. Allowing you to insert literal $, 
       newlines, carriage returns, and @'s in strings.
     - Added pathDirPart(), pathDrivePart(), pathFilePart(), pathFileNamePart(),
       and pathExtPart() functions.
+    - Extended the prefix RC syntax by adding @ as a special character in the 
+      value, refering to the current prefix.
 
   - [2013-08-04] -
     - Fixed the A versions of GetRCString, Line, and so on writing to the entire
@@ -220,6 +223,8 @@ This is a list of selected changes since the (projected) 0.24.8 final build:
       menu.
     - Support for unicode modules.
     - Added GetRCFloat, GetRCDouble, and GetRCInt64.
+    - Extended the prefix RC syntax by adding @ as a special character in the 
+      value, refering to the current prefix.
 
 
   - VISTA & WIN7 & 64-BIT SUPPORT -
